(add)-Se crearon los estilos para las tablet--(fix)-Se arreglaron otros estilos de la version mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -335,13 +335,11 @@ main {
         font-weight: 500;
         line-height: 1.8rem;
         color:#808080;
-        ;
     }
 
         /* Inicio estilos tarjeta */
 
-        .card-detail {
-            width: 90%;
+        .card-container {
             min-width: 288px;
             max-width: 400px;
             height: 150px;
@@ -608,11 +606,11 @@ footer {
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x mandatory;
-    gap: 15px;
+    gap: 20px;
 }
 
 .slider-section-sm {
-    width: 95%;
+    width: 100%;
     height: 300px;
     gap: 0;
     scroll-snap-type: x proximity;
